[gd_scene load_steps=13 format=3 uid="uid://vx2p0hqyssyi"]

[ext_resource type="Script" uid="uid://c41u4bfyydavg" path="res://tab.gd" id="1_kab8h"]
[ext_resource type="Texture2D" uid="uid://dhciptcukhub8" path="res://security-helmet.png" id="2_cpfxx"]
[ext_resource type="Texture2D" uid="uid://bsbac4s2fnf2q" path="res://chest.png" id="3_2j2wn"]
[ext_resource type="Texture2D" uid="uid://chufw23uw6ogt" path="res://user-line.png" id="3_5jday"]
[ext_resource type="Texture2D" uid="uid://bfstisa3sotvs" path="res://close-line.png" id="3_j5rsk"]
[ext_resource type="Texture2D" uid="uid://bmx8fp1o0vds5" path="res://safety-gloves.png" id="4_62pq8"]
[ext_resource type="Texture2D" uid="uid://cl1rmsfaunf5d" path="res://boots.png" id="5_7vdbk"]
[ext_resource type="Texture2D" uid="uid://bh2jigoxl2lto" path="res://battle.png" id="6_j072u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpoir"]
bg_color = Color(0.93845, 0.93845, 0.93845, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wv5r"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5y06"]
bg_color = Color(0.856067, 0.856067, 0.856067, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62pq8"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="tab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kab8h")

[node name="centerProfile" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 179.0
offset_right = 663.0
offset_bottom = 383.0
texture = ExtResource("3_5jday")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 656.0
offset_right = 1028.0
offset_bottom = 1311.0
theme_override_styles/panel = SubResource("StyleBoxFlat_cpoir")

[node name="Helmet" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 68.0
offset_top = 209.0
offset_right = 249.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2wv5r")
theme_override_styles/read_only = SubResource("StyleBoxFlat_i5y06")
text = "



            "

[node name="Helmet_avatar" type="TextureRect" parent="Panel/Helmet"]
layout_mode = 0
offset_left = 20.0
offset_top = 11.0
offset_right = 157.0
offset_bottom = 150.0
texture = ExtResource("2_cpfxx")
expand_mode = 4

[node name="Chest" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 359.0
offset_top = 209.0
offset_right = 540.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2wv5r")
theme_override_styles/read_only = SubResource("StyleBoxFlat_i5y06")
text = "



      "

[node name="Chest_avatar" type="TextureRect" parent="Panel/Chest"]
layout_mode = 0
offset_left = 22.0
offset_top = 11.0
offset_right = 159.0
offset_bottom = 150.0
texture = ExtResource("3_2j2wn")
expand_mode = 4

[node name="Gloves2" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 215.0
offset_top = 398.0
offset_right = 396.0
offset_bottom = 558.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2wv5r")
theme_override_styles/read_only = SubResource("StyleBoxFlat_i5y06")
text = "



              "

[node name="Gloves_avatar" type="TextureRect" parent="Panel/Gloves2"]
layout_mode = 0
offset_left = 21.0
offset_top = 11.0
offset_right = 154.0
offset_bottom = 155.0
texture = ExtResource("4_62pq8")
expand_mode = 4

[node name="Boots" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 632.0
offset_top = 205.0
offset_right = 813.0
offset_bottom = 365.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2wv5r")
theme_override_styles/read_only = SubResource("StyleBoxFlat_i5y06")
text = "



              "

[node name="Boots_avatar" type="TextureRect" parent="Panel/Boots"]
layout_mode = 0
offset_left = 29.0
offset_top = 19.0
offset_right = 153.0
offset_bottom = 148.0
texture = ExtResource("5_7vdbk")
expand_mode = 4

[node name="Weapons" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 485.0
offset_top = 395.0
offset_right = 666.0
offset_bottom = 555.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2wv5r")
theme_override_styles/read_only = SubResource("StyleBoxFlat_i5y06")
text = "
        "

[node name="Weapon_avatar" type="TextureRect" parent="Panel/Weapons"]
layout_mode = 0
offset_left = 23.0
offset_top = 13.0
offset_right = 150.0
offset_bottom = 148.0
texture = ExtResource("6_j072u")
expand_mode = 4

[node name="Username" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 229.0
offset_top = 39.0
offset_right = 486.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0.23588, 0.245912, 0.172542, 1)
text = "Arrow Master"

[node name="Type" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 229.0
offset_top = 66.0
offset_right = 357.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(0.235294, 0.247059, 0.172549, 1)
text = "Archer"

[node name="Distance" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 228.0
offset_top = 94.0
offset_right = 485.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(0.235294, 0.247059, 0.172549, 1)
text = "34.2 km"

[node name="Close" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 878.0
offset_top = 24.0
offset_right = 937.0
offset_bottom = 78.0
icon = ExtResource("3_j5rsk")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Avatar" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 76.0
offset_top = 32.0
offset_right = 200.0
offset_bottom = 141.0
texture = ExtResource("3_5jday")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 740.0
offset_right = 640.0
offset_bottom = 811.0

[node name="Profile" type="Button" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 42.0
offset_right = 174.0
offset_bottom = 205.0
icon = ExtResource("3_5jday")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 393.0
offset_right = 832.0
offset_bottom = 435.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "WizardMaster42"
horizontal_alignment = 1

[node name="Level" type="Label" parent="."]
layout_mode = 0
offset_left = 203.0
offset_top = 439.0
offset_right = 827.0
offset_bottom = 481.0
theme_override_colors/font_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_font_sizes/font_size = 25
text = "Level 42"
horizontal_alignment = 1

[node name="Timer" type="Label" parent="."]
layout_mode = 0
offset_left = 287.0
offset_top = 573.0
offset_right = 759.0
offset_bottom = 782.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_62pq8")
text = "0
"

[node name="Close2" type="Button" parent="."]
layout_mode = 0
offset_left = 946.0
offset_top = 27.0
offset_right = 1050.0
offset_bottom = 126.0
icon = ExtResource("3_j5rsk")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Profile" to="." method="_stats_pressed"]
[connection signal="pressed" from="Close2" to="." method="_close2"]
